--- a/single-new.html
+++ b/single-new.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
 
     <!-- Calling CSS Files -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/single-new.css">
 
     <!-- Page Title -->
     <title>Home</title>
