Finish Page Header (Main Page)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,63 @@
     <div class="container">
         <!-- Start Page Header -->
         <header class="page-header">
+            <!-- Start Latest News Section -->
+            <section class="new-sec latest-sec">
+                <!-- Big Latest New -->
+                <div class="big-latest">
+                    <div class="latest-new">
+                        <img src="img/latest1.jpg" class="new-image" alt="Latest News">
 
+                        <!-- New Information -->
+                        <div class="new-info">
+                            <h3 class="new-title"><a href="#" class="new-link">Amnesty report calls Israel an apartheid state</a></h3>
+                            <a href="#" class="new-category">MIDDLE EAST</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- More Latest News -->
+                <div class="more-latest">
+                    <div class="latest-new">
+                        <img src="img/latest5.jpg" class="new-image" alt="Latest News">
+
+                        <!-- New Information -->
+                        <div class="new-info">
+                            <h3 class="new-title"><a href="#" class="new-link">The millennials choosing friends as sperm donors</a></h3>
+                            <a href="#" class="new-category">WORK LIFE</a>
+                        </div>
+                    </div>
+
+                    <div class="latest-new">
+                        <img src="img/latest2.jpg" class="new-image" alt="Latest News">
+
+                        <!-- New Information -->
+                        <div class="new-info">
+                            <h3 class="new-title"><a href="#" class="new-link">Ukraine leader praises West's response on Russia</a></h3>
+                            <a href="#" class="new-category">EUROPE</a>
+                        </div>
+                    </div>
+
+                    <div class="latest-new">
+                        <img src="img/latest3.jpg" class="new-image" alt="Latest News">
+
+                        <!-- New Information -->
+                        <div class="new-info">
+                            <h3 class="new-title"><a href="#" class="new-link">Ros Atkins on... Sue Gray's report</a></h3>
+                            <a href="#" class="new-category">UK POLICIES</a>
+                        </div>
+                    </div>
+
+                    <div class="latest-new">
+                        <img src="img/latest4.jpg" class="new-image" alt="Latest News">
+
+                        <!-- New Information -->
+                        <div class="new-info">
+                            <h3 class="new-title"><a href="#" class="new-link">How modern food lost its nutrients</a></h3>
+                            <a href="#" class="new-category">FOOD</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </header>
         <!-- End Page Header -->
 
