create the structure element for the header and remove unnesscary contnt relates #5

--- a/single-new.html
+++ b/single-new.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Calling Fonts (Online) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Calling CSS Files -->
-    <link rel="stylesheet" href="css/single-new.css">
+    <link rel="stylesheet" href="css/single-new.css" />
 
     <!-- Page Title -->
-    <title>Home</title>
-</head>
-<body>
+    <title>detail page</title>
+  </head>
+  <body>
+    <!-- Start Page Header -->
+    <header>
+      <h2>Welcome to the description page</h2>
+    </header>
+    <div class="header-image">
+      <img src="/img/1.jpeg" alt="header image " />
+    </div>
+    <!-- End Page Header -->
     <!-- Start Container -->
     <div class="container">
-        <!-- Start Page Header -->
-        <header class="page-header">
+      <!-- Start Page Main -->
+      <main class="page-main"></main>
+      <!-- End Page Main -->
 
-        </header>
-        <!-- End Page Header -->
-
-        <!-- Start Page Main -->
-        <main class="page-main">
-
-        </main>
-        <!-- End Page Main -->
-
-        <!-- Start Page Footer -->
-        <footer class="page-footer">
-
-        </footer>
-        <!-- End Page Footer -->
+      <!-- Start Page Footer -->
+      <footer class="page-footer"></footer>
+      <!-- End Page Footer -->
     </div>
     <!-- End Container -->
 
     <!-- Calling Js Files -->
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
