Style Body Of News R #17

--- a/single-new.html
+++ b/single-new.html
@@ -95,18 +95,14 @@
                                 alt="The casket of late U.S"
                                 src="/img/sub-img-1.jpg"
                             />
-                            <div class="content-img-description-container">
-                                <p class="img-description">
-                                    The casket of late U.S. Rep. John Lewis, a
-                                    pioneer of the civil rights movement who
-                                    died July 17, is carried outside the Brown
-                                    Chapel A.M.E. Church, in Selma, Ala., on
-                                    July 26, 2020.
-                                    <span>
-                                        Christopher Aluka Berry / Reuters</span
-                                    >
-                                </p>
-                            </div>
+
+                            <p class="img-description">
+                                The casket of late U.S. Rep. John Lewis, a
+                                pioneer of the civil rights movement who died
+                                July 17, is carried outside the Brown Chapel
+                                A.M.E. Church, in Selma, Ala., on July 26, 2020.
+                                <span> Christopher Aluka Berry / Reuters</span>
+                            </p>
                         </div>
                     </div>
 
@@ -216,6 +212,7 @@
                         </p>
                     </div>
 
+                    <!--  section body comment container  -->
                     <div class="body-comment-container">
                         <div class="comment-header-container">
                             <div class="section-likes">
