End Style Body Of News and now start Responsive R #17

--- a/single-new.html
+++ b/single-new.html
@@ -13,6 +13,14 @@
             rel="stylesheet"
         />
 
+        <!-- Font Awesome -->
+        <link
+            rel="stylesheet"
+            href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+            integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+            crossorigin="anonymous"
+        />
+
         <!-- Calling CSS Files -->
         <link rel="stylesheet" href="css/single-new.css" />
 
@@ -214,16 +222,14 @@
 
                     <!--  section body comment container  -->
                     <div class="body-comment-container">
-                        <div class="comment-header-container">
-                            <div class="section-likes">
-                                <div class="section-hart">
-                                    <i class="fa fa-hart"></i>
-                                    <p class="number">28</p>
-                                </div>
-                                <div class="section-re-comment">
-                                    <i class="fa fa-comment"></i>
-                                    <p class="number">21 responses</p>
-                                </div>
+                        <div class="comment-header-container">  
+                            <div class="section-hart">
+                                <i class="far fa-heart"></i>
+                                <p class="number">28</p>
+                            </div>
+                            <div class="section-re-comment">
+                                <i class="far fa-comments"></i>
+                                <p class="number">21 responses</p>
                             </div>
                         </div>
 
@@ -235,7 +241,7 @@
                                 />
                             </div>
                             <div class="comment-details">
-                                <p class="commented-tage-name">Author</p>
+                                <p class="commented-tag-name">Author</p>
                                 <p class="commented-name">Caroline Casey</p>
                                 <p class="comment-text">
                                     Caroline Casey is an award-winning social
