Create footer Relates #14

--- a/index.html
+++ b/index.html
@@ -117,7 +117,34 @@
 
         <!-- Start Page Footer -->
         <footer class="page-footer">
-
+            <div class="container-box">
+                <div class="footer-box">
+                    <div class="logo-copyright">
+                        <img src="img/footerLogo.png" alt="logo">
+                        <p>copyright &copy; 2022 | NBC NEWS</p>
+                    </div>
+                    <ul class="policy">
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Do not sell my personal info</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">nbcnews.com Site Map</a></li>
+                    </ul>
+                    <div class="footer-links">
+                        <ul class="page-sections">
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Career</a></li>
+                            <li><a href="#">Coupons</a></li>
+                        </ul>
+                        <ul class="social-icons">
+                            <li><a href="#"><i class="fas fa-rss fa-2x rss"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter fa-2x twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-reddit-alien fa-2x reddit"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook fa-2x facebook"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </footer>
         <!-- End Page Footer -->
     </div>
