add the navbar to the single news page [detail page] relates #25

--- a/single-new.html
+++ b/single-new.html
@@ -28,6 +28,37 @@
     <title>detail page</title>
   </head>
   <body>
+    <!-- Start Navigation Bar -->
+    <nav>
+      <div class="container-box">
+        <div class="nav">
+          <div class="logo">
+            <img src="img/logo.png" alt="logo" />
+          </div>
+          <ul class="nav-links show">
+            <li><a href="#">Corona Updates</a></li>
+            <li><a href="#politics">Politics</a></li>
+            <li><a href="#business">Business</a></li>
+            <li><a href="#sports">Sports</a></li>
+            <li><a href="#words">Words</a></li>
+            <li><a href="#travel">Travel</a></li>
+            <li><a href="#podcasts">Podcasts</a></li>
+          </ul>
+          <ul class="nav-icons">
+            <li>
+              <a href="#"><i class="far fa-user"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fas fa-search"></i></a>
+            </li>
+            <li class="bar-icon">
+              <a href="#"><i class="fas fa-bars"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- End Navigation Bar-->
     <!-- Start Page Header -->
     <header>
       <h2>Welcome to the description page</h2>
