--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
         <!-- Start Page Header -->
         <header class="page-header">
-            <!-- Start Latest News Section -->
+            <div class="k-container">
+                <!-- Start Latest News Section -->
             <section class="new-sec latest-sec">
                 <!-- Big Latest New -->
                 <div class="big-latest">
@@ -106,6 +107,7 @@
                     </div>
                 </div>
             </section>
+            </div>
         </header>
         <!-- End Page Header -->
 
