add animation to the relaed blog cards fix the path of img and set margin to 0 in the mobile screen

--- a/single-new.html
+++ b/single-new.html
@@ -64,7 +64,7 @@
       <h2>Welcome to the description page</h2>
     </header>
     <div class="header-image">
-      <img src="/img/1.jpeg" alt="header image " />
+      <img src="img/1.jpeg" alt="header image " />
     </div>
     <!-- End Page Header -->
     <!-- Single Page body Container -->
@@ -246,7 +246,7 @@
               <div class="comment-avatar">
                 <img
                   alt="comment avatar Caroline Casey"
-                  src="/img/avatar.png"
+                  src="img/avatar.png"
                 />
               </div>
               <div class="comment-details">
@@ -270,7 +270,7 @@
             <a class="banner-body" href="#">
               <img
                 alt="Recommended for you"
-                src="/img/recommended-for-you.png"
+                src="img/recommended-for-you.png"
               />
               <p class="banner-body-paragraph">
                 Millions rely on emergency pandemic benefits for rent, food, and
