Finish Categories Section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,68 @@
 
         <!-- Start Page Main -->
         <main class="page-main">
+            <div class="k-container">
+                <section class="categories-sec">
+                    <section class="new-sec politics-sec">
+                        <h3 class="sec-title">Politics</h3>
+                        <div class="sec-boxes">
+                            <!-- Single New -->
+                            <div class="single-new">
+                                <!-- New Image -->
+                                <div class="new-image">
+                                    <img src="img/politics1.jpg" class="new-image" alt="New Image">
+                                </div>
 
+                                <!-- New Info -->
+                                <div class="new-info">
+                                    <h4 class="new-title"><a href="single-new.html" class="new-link">US trying to draw Russia into war, Putin says</a></h4>
+                                    <p class="new-desc">Lorem ipsum dolor sit, consectetur adipisicing elit. Voluptatibus,</p>
+                                    <span class="new-date">2 hours ago</span>
+                                </div>
+                            </div>
+
+                            <!-- Single New -->
+                            <div class="single-new">
+                                <!-- New Image -->
+                                <div class="new-image">
+                                    <img src="img/politics2.jpg" class="new-image" alt="New Image">
+                                </div>
+
+                                <!-- New Info -->
+                                <div class="new-info">
+                                    <h4 class="new-title"><a href="single-new.html" class="new-link">Tonga enters Covid lockdown after aid delivered
+                                    </a></h4>
+                                    <p class="new-desc">Lorem ipsum dolor sit, consectetur adipisicing elit. Voluptatibus,</p>
+                                    <span class="new-date">2 hours ago</span>
+                                </div>
+                            </div>
+
+                            <!-- Single New -->
+                            <div class="single-new">
+                                <!-- New Image -->
+                                <div class="new-image">
+                                    <img src="img/politics3.jpg" class="new-image" alt="New Image">
+                                </div>
+
+                                <!-- New Info -->
+                                <div class="new-info">
+                                    <h4 class="new-title"><a href="single-new.html" class="new-link">Why is Myanmar's military so brutal?</a></h4>
+                                    <p class="new-desc">Lorem ipsum dolor sit, consectetur adipisicing elit. Voluptatibus,</p>
+                                    <span class="new-date">2 hours ago</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="sec-btns">
+                            <button class="btn more">VIEW MORE</button>
+                        </div>
+                    </section>
+                </section>
+
+                <aside class="side">
+
+                </aside>
+            </div>
         </main>
         <!-- End Page Main -->
 
