Create aside Relates #37

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                     </div>
                     <ul class="nav-links show">
                         <li><a href="#">Corona Updates</a></li>
-                        <li><a href="single-new.html">Politics</a></li>
-                        <li><a href="single-new.html">Business</a></li>
-                        <li><a href="single-new.html">Sports</a></li>
-                        <li><a href="single-new.html">Words</a></li>
-                        <li><a href="single-new.html">Travel</a></li>
-                        <li><a href="single-new.html">Podcasts</a></li>
+                        <li><a href="#politics">Politics</a></li>
+                        <li><a href="#business">Business</a></li>
+                        <li><a href="#sports">Sports</a></li>
+                        <li><a href="#world">World</a></li>
+                        <li><a href="#travel">Travel</a></li>
+                        <li><a href="#culture">Culture</a></li>
                     </ul>
                     <ul class="nav-icons">
                         <li><a href="#"><i class="far fa-user"></i></a></li>
@@ -116,7 +116,7 @@
             <div class="k-container">
                 <section class="categories-sec">
                     <!-- First Category -->
-                    <section class="new-sec politics-sec">
+                    <section id="politics" class="new-sec politics-sec">
                         <h3 class="sec-title">Politics</h3>
                         <div class="sec-boxes">
                             <!-- Single New -->
@@ -172,7 +172,7 @@
                     </section>
 
                     <!-- Second Category -->
-                    <section class="new-sec politics-sec">
+                    <section id="business"  class="new-sec politics-sec">
                         <h3 class="sec-title">Business</h3>
                         <div class="sec-boxes">
                             <!-- Single New -->
@@ -227,7 +227,7 @@
                     </section>
 
                     <!-- Third Section -->
-                    <section class="new-sec politics-sec">
+                    <section id="sports" class="new-sec politics-sec">
                         <h3 class="sec-title">Sports</h3>
                         <div class="sec-boxes">
                             <!-- Single New -->
@@ -282,7 +282,7 @@
                     </section>
 
                     <!-- Fourth Section -->
-                    <section class="new-sec politics-sec">
+                    <section id="world" class="new-sec politics-sec">
                         <h3 class="sec-title">World</h3>
                         <div class="sec-boxes">
                             <!-- Single New -->
@@ -337,7 +337,7 @@
                     </section>
 
                     <!-- Fifth Section -->
-                    <section class="new-sec politics-sec">
+                    <section id="travel" class="new-sec politics-sec">
                         <h3 class="sec-title">Travel</h3>
                         <div class="sec-boxes">
                             <!-- Single New -->
@@ -393,7 +393,7 @@
 
 
                     <!-- Sixth Section -->
-                    <section class="new-sec politics-sec">
+                    <section id="culture" class="new-sec politics-sec">
                         <h3 class="sec-title">Culture</h3>
                         <div class="sec-boxes">
                             <!-- Single New -->
@@ -448,9 +448,80 @@
                     </section>
 
                 </section>
+                <aside>
+                    <div class="clock" style="text-align:center;padding:1em 0;">
+                        <h3><a style="text-decoration:none;" href="https://www.zeitverschiebung.net/en/city/281133"><span style="color:gray;"></span><br />Gaza, Palestinian Territory</a></h3>
+                        <iframe src="https://www.zeitverschiebung.net/clock-widget-iframe-v2?language=en&size=medium&timezone=Asia%2FGaza" width="100%" height="115" frameborder="0" seamless></iframe>
+                    </div>
+                    <div class="single-sidebar no-padding wether">
+                        <a href="https://www.accuweather.com/en/us/new-york-ny/10007/weather-forecast/349727" class="aw-widget-legal">
+                        <!--
+                        By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at https://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at https://www.accuweather.com/en/privacy.
+                        -->
+                        </a><div id="awcc1499974479079" class="aw-widget-current gte-479" data-locationkey="" data-unit="c" data-language="en-us" data-useip="true" data-uid="awcc1499974479079" style="display: block;"><style type="text/css">  .aw-icon-38-t {background-image:url(https://vortex.accuweather.com/adc2010/images/icons-numbered/38-t.png)} .aw-icon-38-h {background-image:url(https://vortex.accuweather.com/adc2010/images/icons-numbered/38-h.png)} .aw-icon-38-s {background-image:url(https://vortex.accuweather.com/adc2010/images/icons-numbered/38-s.png)} .aw-icon-38-m {background-image:url(https://vortex.accuweather.com/adc2010/images/icons-numbered/38-m.png)} .aw-icon-38-l {background-image:url(https://vortex.accuweather.com/adc2010/images/icons-numbered/38-l.png)} .aw-icon-38-xl {background-image:url(https://vortex.accuweather.com/adc2010/images/icons-numbered/38-xl.png)} </style><script type="text/javascript">      var awxWidgetInfo = awxWidgetInfo || {};      awxWidgetInfo.awcc1499974479079 = {};      awxWidgetInfo.awcc1499974479079.userInfo = {      country: 'IE',          city: "Dublin",      state: 'D',      metro: '',      zip: '',      fcode: 'IE175',      partner: 'accuweather',      sessionPartner: 'accuweather',      referer: 'https://html.dynamiclayers.net/',      lang: 'en-us',      langid: '1',      lat: '53.343',      lon: '-6.272',      dma: '',      ip: '158.140.119.193',      ipLocation: '',      sessionViews: 0,      geo_dma: '',      geo_city: 'Dublin',      geo_state: 'D',      geo_zip: '',      geo_country: 'IE'      };      awxWidgetInfo.awcc1499974479079.wxInfo = {      nwsalrt: '',          hdln: '',      ut: '',      cu: { wx: '', hi: '', wd: '', hd: '', uv: '' },      fc: [{wx: '', hi: '', lo: ''}],          ix: {},      mcpct: "1"        };</script><div class="aw-widget-current-inner"><div class="aw-widget-content bg-s"><a id="link_current" href="https://www.accuweather.com/en/ie/dublin/207931/weather-forecast/207931?utm_source=html-dynamiclayers-net&amp;utm_medium=oap_weather_widget&amp;utm_term=link_current&amp;utm_content=accuweather&amp;utm_campaign=current" target="_blank" class="aw-current-weather"><div class="aw-current-weather-inner"><h3>Dublin, IE</h3><span class="aw-icon aw-icon-38-l" data-icon="38"></span><p class="aw-temp-time-desc"><span class="aw-temperature-today"><b>8<sup>°</sup></b></span><time>6:53 am GMT</time>    				<span class="aw-weather-description">Mostly cloudy</span></p></div>        		</a></div><a id="link_get_widget" href="https://www.accuweather.com/en/free-weather-widgets?utm_source=html-dynamiclayers-net&amp;utm_medium=oap_weather_widget&amp;utm_term=link_get_widget&amp;utm_content=accuweather&amp;utm_campaign=current" target="_blank" class="aw-toggle"><i>Get this widget</i></a><div class="aw-get-widget-footer"><p class="aw-get-info">Want weather on your site?</p><a id="link_get_widget_footer" href="https://www.accuweather.com/en/free-weather-widgets?utm_source=html-dynamiclayers-net&amp;utm_medium=oap_weather_widget&amp;utm_term=link_get_widget_footer&amp;utm_content=accuweather&amp;utm_campaign=current" target="_blank" class="aw-get-this-widget"><i class="aw-get-widget-icon"></i><span>Get widget</span></a></div></div>  </div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script>
+                    </div>
+                    <div class="aside-tab">
+                        <ul class="news-type">
+                            <li class="active">Recent</li>
+                            <li>Popular</li>
+                            <li>Comments</li>
+                        </ul>
+                        <div class="tab-content">
+                            <ul class="tab-list">
+                                <li>
+                                    <img src="img/tab-1.jpg" alt="tab">
+                                    <div class="tab-info">
+                                        <p>William Braynt went to visit the US.</p>
+                                        <span>NATIONAL OCTOBAR 2017</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="img/tab-2.jpg" alt="tab">
+                                    <div class="tab-info">
+                                        <p>Style icon angelina goes to take oscar.</p>
+                                        <span>NATIONAL OCTOBAR 2017</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="img/tab-3.jpg" alt="tab">
+                                    <div class="tab-info">
+                                        <p>How to become a wildlife photographer?</p>
+                                        <span>NATIONAL OCTOBAR 2017</span>
+                                    </div>
+                                </li>
+                                <li>
+                                    <img src="img/tab-4.jpg" alt="tab">
+                                    <div class="tab-info">
+                                        <p>linin park singer is no more. he is top in the world.</p>
+                                        <span>NATIONAL OCTOBAR 2017</span>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
 
-                <aside class="side">
-
+                    </div>
+                    <div class="aside-category">
+                        <h2 class="block-title">News Category</h2>
+                        <ul class="category-list">
+                            <li><a href="#">Worlds</a></li>
+                            <li><a href="#">Travel</a></li>
+                            <li><a href="#">Food</a></li>
+                            <li><a href="#">Creative</a></li>
+                            <li><a href="#">Sports</a></li>
+                            <li><a href="#">Racing</a></li>
+                            <li><a href="#">Technology</a></li>
+                        </ul>
+                    </div>
+                    <div class="aside-form">
+                        <h2 class="block-title">Subscribe nbc news</h2>
+                        <div class="form">
+                            <input type="email" name="email" id="email" placeholder="Enter Your Email">
+                            <input type="submit" value="subscribe">
+                        </div>
+                    </div>
+                    <div class="calendar">
+                        <iframe src="https://calendar.google.com/calendar/embed?height=500&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FGaza&showTitle=0&showNav=0&showTabs=0&showPrint=0&showDate=1&showCalendars=0&showTz=0&src=ai5hYnVzaGFxcmExQGdtYWlsLmNvbQ&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679" height="300px" width="100%" frameborder="0" scrolling="no"></iframe>
+                    </div>
                 </aside>
             </div>
         </main>
