--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container-box">
                 <div class="nav">
                     <div class="logo">
-                        <img src="img/logo.png" alt="logo">
+                        <a href="index.html"><img src="img/logo.png" alt="logo"></a>
                     </div>
                     <ul class="nav-links show">
                         <li><a href="#">Corona Updates</a></li>
