Fix link image In Single page R #42

--- a/single-new.html
+++ b/single-new.html
@@ -132,7 +132,7 @@
                         <div class="content-image">
                             <img
                                 alt="The casket of late U.S"
-                                src="/img/sub-img-1.jpg"
+                                src="img/sub-img-1.jpg"
                             />
 
                             <p class="img-description">
@@ -189,7 +189,7 @@
                         <div class="content-image">
                             <img
                                 alt="The casket of Rep."
-                                src="/img/sub-img-2.jpg"
+                                src="img/sub-img-2.jpg"
                             />
                             <div class="content-img-description-container">
                                 <p class="img-description">
@@ -308,7 +308,7 @@
                         <a class="banner-body" href="#">
                             <img
                                 alt="Based on Like"
-                                src="/img/based-on-like.png"
+                                src="img/based-on-like.png"
                             />
                             <p class="banner-body-paragraph">
                                 The ADA is turning 30. It's time that it
@@ -327,50 +327,74 @@
             <div class="related-blog">
                 <div class="box">
                     <img src="img/image 55.png" alt="blog image" />
-                    <h3>India & Its Magnetic Charm For Foreign Investments</h3>
-                    <hr />
+                    <div class="box-card-container">
+                        <h3>
+                            India & Its Magnetic Charm For Foreign Investments
+                        </h3>
+                        <hr />
 
-                    <div class="social">
-                        <span
-                            ><img src="img/Group 270.png" alt="love btn"
-                        /></span>
-                        <span><img src="img/Group 269.png" alt="save" /></span>
+                        <div class="social">
+                            <span
+                                ><img src="img/Group 270.png" alt="love btn"
+                            /></span>
+                            <span
+                                ><img src="img/Group 269.png" alt="save"
+                            /></span>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
                     <img src="img/image 62.png" alt="blog image" />
-                    <h3>India & Its Magnetic Charm For Foreign Investments</h3>
-                    <hr />
+                    <div class="box-card-container">
+                        <h3>
+                            India & Its Magnetic Charm For Foreign Investments
+                        </h3>
+                        <hr />
 
-                    <div class="social">
-                        <span
-                            ><img src="img/Group 270.png" alt="love btn"
-                        /></span>
-                        <span><img src="img/Group 269.png" alt="save" /></span>
+                        <div class="social">
+                            <span
+                                ><img src="img/Group 270.png" alt="love btn"
+                            /></span>
+                            <span
+                                ><img src="img/Group 269.png" alt="save"
+                            /></span>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
                     <img src="img/image 63.png" alt="blog image" />
-                    <h3>India & Its Magnetic Charm For Foreign Investments</h3>
-                    <hr />
+                    <div class="box-card-container">
+                        <h3>
+                            India & Its Magnetic Charm For Foreign Investments
+                        </h3>
+                        <hr />
 
-                    <div class="social">
-                        <span
-                            ><img src="img/Group 270.png" alt="love btn"
-                        /></span>
-                        <span><img src="img/Group 269.png" alt="save" /></span>
+                        <div class="social">
+                            <span
+                                ><img src="img/Group 270.png" alt="love btn"
+                            /></span>
+                            <span
+                                ><img src="img/Group 269.png" alt="save"
+                            /></span>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
                     <img src="img/image 66.png" alt="blog image" />
-                    <h3>India & Its Magnetic Charm For Foreign Investments</h3>
-                    <hr />
+                    <div class="box-card-container">
+                        <h3>
+                            India & Its Magnetic Charm For Foreign Investments
+                        </h3>
+                        <hr />
 
-                    <div class="social">
-                        <span
-                            ><img src="img/Group 270.png" alt="love btn"
-                        /></span>
-                        <span><img src="img/Group 269.png" alt="save" /></span>
+                        <div class="social">
+                            <span
+                                ><img src="img/Group 270.png" alt="love btn"
+                            /></span>
+                            <span
+                                ><img src="img/Group 269.png" alt="save"
+                            /></span>
+                        </div>
                     </div>
                 </div>
             </div>
