--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <button class="btn more">VIEW MORE</button>
+                           <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
                         </div>
                     </section>
 
@@ -222,7 +222,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <button class="btn more">VIEW MORE</button>
+                            <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
                         </div>
                     </section>
 
@@ -277,7 +277,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <button class="btn more">VIEW MORE</button>
+                            <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
                         </div>
                     </section>
 
@@ -332,7 +332,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <button class="btn more">VIEW MORE</button>
+                            <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
                         </div>
                     </section>
 
@@ -387,7 +387,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <button class="btn more">VIEW MORE</button>
+                            <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
                         </div>
                     </section>
 
@@ -443,7 +443,7 @@
                         </div>
 
                         <div class="sec-btns">
-                            <button class="btn more">VIEW MORE</button>
+                            <a href="single-new.html"><button class="btn more">VIEW MORE</button></a>
                         </div>
                     </section>
 
